# fastapi-init

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
dev/: docker-compose.yml
migrations/: env.py
migrations/versions/: 2025-12-29_aaac8ebf86a9.py  2026-01-14_9a107809ba2d.py  2026-01-14_f02f8b3fefd1.py  2026-01-14_f7da6c16df9a.py
src/tiny/: api.py  main.py
src/tiny/core/: config.py  database.py  dependencies.py  lifespan.py  log.py  metrics.py  rate_limiting.py  redis.py
src/tiny/integrations/: base_client.py
src/tiny/middlewares/: request_log.py  security.py
src/tiny/models/: auth.py  token.py  user.py
src/tiny/repositories/: token.py  user.py
src/tiny/routers/: auth.py  health.py  user.py
src/tiny/services/: auth.py  token.py
src/tiny/services/auth/: models.py  repository.py  router.py  service.py
src/tiny/utils/: cache.py
